[package]
name = "display_macro"
version = "0.1.0"
description = "Derive Display Trait with #[display(\"...\")]"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
display_macro-impl = { version = "0.1.0", path = "impl" }

[workspace]
members = ["impl"]

[dev-dependencies]
pretty_assertions = "1.3.0"
